--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "7.13.0",
-    "tailwindcss": "4.1.18"
+    "tailwindcss": "4.1.18",
+    "tinybase": "7.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
