--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
     "globals": "^16.3.0",
     "prettier": "3.8.1",
     "typescript": "~5.8.3",
