--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "3.36.1",
     "@tailwindcss/vite": "4.1.18",
+    "class-variance-authority": "0.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "7.71.1",
