--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "7.71.1",
     "react-router-dom": "7.13.0",
     "tailwindcss": "4.1.18",
-    "tinybase": "7.3.2"
+    "tinybase": "7.3.2",
+    "zod": "4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
