--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "7.13.0",
     "tailwindcss": "4.1.18",
     "tinybase": "7.3.2",
+    "tonal": "6.4.3",
     "zod": "4.3.6"
   },
   "devDependencies": {
