--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "4.1.18",
     "tinybase": "7.3.2",
     "tonal": "6.4.3",
+    "webmidi": "3.1.14",
     "zod": "4.3.6"
   },
   "devDependencies": {
