--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "2.2.8",
     "@tabler/icons-react": "3.36.1",
     "@tailwindcss/vite": "4.1.18",
     "class-variance-authority": "0.7.1",
