Use util for conditional classes and merging

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@tabler/icons-react": "3.36.1",
     "@tailwindcss/vite": "4.1.18",
     "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "7.71.1",
     "react-router-dom": "7.13.0",
+    "tailwind-merge": "3.4.0",
     "tailwindcss": "4.1.18",
     "tinybase": "7.3.2",
     "tonal": "6.4.3",
