--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-sort-keys-fix": "1.1.2",
+    "eslint-plugin-unused-imports": "4.3.0",
     "globals": "^16.3.0",
     "prettier": "3.8.1",
     "typescript": "~5.8.3",
