--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "7.71.1",
     "react-router-dom": "7.13.0",
-    "react-sketch-canvas": "6.2.0",
+    "react-sketch-canvas": "7.0.0-next.5",
     "tailwind-merge": "3.4.0",
     "tailwindcss": "4.1.18",
     "tinybase": "7.3.2",
