--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@headlessui/react": "2.2.8",
+    "@popperjs/core": "2.11.8",
     "@tabler/icons-react": "3.36.1",
     "@tailwindcss/vite": "4.1.18",
     "class-variance-authority": "0.7.1",
@@ -20,6 +21,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "7.71.1",
+    "react-popper": "2.3.0",
     "react-router-dom": "7.13.0",
     "react-sketch-canvas": "7.0.0-next.5",
     "tailwind-merge": "3.4.0",
