--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "globals": "^16.3.0",
     "jsdom": "25.0.1",
     "prettier": "3.8.1",
+    "prettier-plugin-tailwindcss": "0.7.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
