--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-popper": "2.3.0",
     "react-router-dom": "7.13.0",
     "react-sketch-canvas": "7.0.0-next.5",
+    "smplr": "0.16.4",
+    "soundfont2": "0.5.0",
     "tailwind-merge": "3.4.0",
     "tailwindcss": "4.1.18",
     "tinybase": "7.3.2",
