--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@popperjs/core": "2.11.8",
     "@tabler/icons-react": "3.36.1",
     "@tailwindcss/vite": "4.1.18",
+    "@tanstack/react-query": "5.90.20",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "react": "^19.1.0",
