--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "2.2.8",
     "@popperjs/core": "2.11.8",
+    "@spotify/web-api-ts-sdk": "1.2.0",
     "@tabler/icons-react": "3.36.1",
     "@tailwindcss/vite": "4.1.18",
     "@tanstack/react-query": "5.90.20",
