--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-sketch-canvas": "7.0.0-next.5",
     "smplr": "0.16.4",
     "soundfont2": "0.5.0",
+    "spotify-uri": "4.1.0",
     "tailwind-merge": "3.4.0",
     "tailwindcss": "4.1.18",
     "tinybase": "7.3.2",
