--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4",
+    "vite-plugin-pwa": "1.2.0",
     "vitest": "3.2.4"
   }
 }
